# yinix

./: .gitignore  CMakeLists.txt  Plan.md  README.md  答辩讲解稿.md  课程设计要求.txt
src/: main.cpp
src/device/: Device.h  DeviceManager.cpp  DeviceManager.h
src/filesystem/: FSNode.h  FileSystem.cpp  FileSystem.h
src/memory/: MemoryManager.cpp  MemoryManager.h
src/process/: PCB.h  ProcessManager.cpp  ProcessManager.h  Semaphore.h  SyncManager.cpp  SyncManager.h
src/shell/: Shell.cpp  Shell.h
tests/: README.md  helper.sh  run_all.sh  test_device.sh  test_filesystem.sh  test_integration.sh  test_memory.sh  test_process.sh  test_sync.sh
